# trivia-quiz

./: README.md  io.github.nokse22.trivia-quiz.json  io.github.nokse22.trivia.json  io.github.nokse22.triviaquiz.json  meson.build
.github/workflows/: flatpak.yml  snap.yml
data/: gschemas.compiled  io.github.nokse22.trivia-quiz.desktop.in  io.github.nokse22.trivia-quiz.gschema.xml  io.github.nokse22.trivia-quiz.metainfo.xml.in  io.github.nokse22.trivia.desktop.in  io.github.nokse22.trivia.gschema.xml  io.github.nokse22.trivia.metainfo.xml.in  io.github.nokse22.triviaquiz.desktop.in  io.github.nokse22.triviaquiz.gschema.xml  io.github.nokse22.triviaquiz.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  ar.po  bg.po  hi.po  it.po  meson.build  nl.po  sr.po  sr@latin.po  template.pot  trivia-quiz.pot
snap/: snapcraft.yaml
src/: __init__.py  backend.py  main.py  meson.build  question.py  style.css  trivia-quiz.gresource.xml  trivia-quiz.in  trivia.gresource.xml  trivia.in  window.py  window.ui
